apps/ezxss/base/namespace.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.36.2/namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: ezxss
  labels:
    app.kubernetes.io/instance: ezxss
