apps/ezxss/base/gateway.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ezxss
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - hostname: dm3.in
    name: ezxss
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - kind: Secret
        name: ezxss-gateway-tls
      mode: Terminate
